# iiwa_toolkit

./: CMakeLists.txt  README.md  package.xml
cfg/: marker_tracking_cfg_params.cfg  passive_cfg_params.cfg
config/: inertia_params.yaml  limbo_interface_params.yaml  marker_following_params.yaml  passive_track_params.yaml
include/: motion_capture.h  passive_control.h  qp_control.h
launch/: limbo_interface_gazebo.launch  limbo_interface_real.launch  marker_following_gazebo.launch  marker_following_real.launch  optitrack.launch  passive_track_gazebo.launch  passive_track_real.launch
src/: motion_capture.cpp  node_limbo_interface.cpp  node_marker_following.cpp  node_passive_track.cpp  passive_control.cpp  qp_control.cpp
